[Flame] Some JS refactoring

--- a/sjk-hflame/src/main/resources/flame_template.html
+++ b/sjk-hflame/src/main/resources/flame_template.html
@@ -33,7 +33,7 @@
             </div>
         </div>
         <script>
-            updateChart("fg1", data);
+            createFlameChart("fg1", data).initFlameChart();
         </script>
     </body>
 </html>
