--- a/sjk-hflame/src/main/resources/flame_template.html
+++ b/sjk-hflame/src/main/resources/flame_template.html
@@ -1,9 +1,20 @@
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="css/flame.css"/>
-        <script id="import_jquery" src="js/jquery-3.1.1.min.js"></script>
-        <script id="import_flamer" src="js/flamer.js"></script>
-        <script id="import_data_fg1" src="../../test/resources/js/dummy_stub.js"></script>
+        <script id="polyfill">
+            if (!String.prototype.startsWith) {
+  String.prototype.startsWith = function(searchString, position) {
+    position = position || 0;
+    return this.indexOf(searchString, position) === position;
+  };
+}
+        </script>
+        <link id="importcss_flame" rel="stylesheet" type="text/css" href="css/flame.css"/>
+        <script id="importjs_jquery" src="js/jquery-3.1.1.min.js"></script>
+        <script id="importjs_flamer" src="js/flamer.js"></script>
+        <script src="../../test/resources/js/dummy_data_tiny.js"></script>
+        <script>
+//            $(document).ready(function() {createFlameChart("fg1", data).initFlameChart()});
+        </script>
     </head>
     <body>
         <div>
@@ -13,27 +24,13 @@
             <div>This is flame frame</div>
             <div class="flameHover" style="display: none">This is flame hover</div>
             <div class="flameRoot">
-                <div class="flameBox" style="flex-basis: 100%;">
-                   <div class="flameRow">
-                       <div class="flameBox" style="flex-basis: 15%;">
-                           <div class="flameRow">
-                               <div class="flameBox" style="flex-basis: 50%;">
-                                   <div class="execNode">MyClass.b</div>
-                               </div>
-                           </div>
-                           <div class="execNode">MyClass.a</div>
-                       </div>
-                       <div class="flameBox" style="flex-basis: 85%;">
-                           <div class="hotSmoke"></div>
-                           <div class="execNode">Object.wait</div>
-                       </div>
-                   </div>
-                   <div class="execNode">Thread.run</div>
+                <div style="display: flex; flex-direction: column">
+                <div style="align-self: center; font-size: 2em; padding-left: 1.5em;">Flame chart is loading ...</div>
+                <div style="align-self: center">You need JavaScript enbaled for flame chart to function</div>
+                <div style="align-self: center">It may take couple of minutes</div>
                 </div>
             </div>
         </div>
-        <script>
-            createFlameChart("fg1", data).initFlameChart();
-        </script>
+        <script id="importflame_fg1">/* template placeholder*/</script>
     </body>
 </html>
