--- a/sjk-hflame/src/main/resources/flame_template.html
+++ b/sjk-hflame/src/main/resources/flame_template.html
@@ -8,31 +8,40 @@
   };
 }
         </script>
-        <link id="importcss_flame" rel="stylesheet" type="text/css" href="css/flame.css"/>
-        <script id="importjs_jquery" src="js/jquery-3.1.1.min.js"></script>
-        <script id="importjs_flamer" src="js/flamer.js"></script>
+        <link rel="stylesheet" type="text/css" href="css/flame.css"/>
+        <script src="js/jquery-3.1.1.min.js"></script>
+        <script>
+            function debug(text) {
+                $("<p></p>").text(text).prependTo("#debug_console");
+            }
+        </script>
+        <script src="js/flamer-model.js"></script>
+        <script src="js/flamer-filter-popup.js"></script>
+        <script src="js/flamer-filter-threads.js"></script>
+        <script src="js/flamer-filter-states.js"></script>
+        <script src="js/flamer-graph.js"></script>
+        <script src="js/flamer-controller.js"></script>
+
         <script src="../../test/resources/js/dummy_data_stub.js"></script>
         <script>
             $(document).ready(function() {createFlameChart("fg1", data).initFlameChart()});
-        </script>
+        </script>        
     </head>
     <body>
         <div id="fg1" class="flameFrame">
             <div class="flameHover" style="display: none">This is flame hover</div>
             <div style="display: flex; flex-direction: row; justify-content: space-between">
-                <div> </div>
-                <div class="flameThreadFilterBtn"><a>threads</a></div>
+                <div></div>
+                <div class="flameStateFilter" style="position: relative">
+                    <a class="btn">states</a>
+                    <div class="panel" style="display: none">---</div>
+                </div>
+                <div class="flameThreadFilter" style="position: relative">
+                    <a class="btn">thread</a>
+                    <div class="panel" style="display: none">---</div>
+                </div>
             </div>
             <div style="position: relative">
-                <div class="flameThreadFilter" style="display: none">
-                    <a class="flameThreadCloseBtn">X</a>
-                    <div class="search"><input type="text"/><a class="all">all</a><a class="none">none</a></div>
-                    <div class="threadList">
-                        <p><input type="checkbox" checked="true"/>Main</p>
-                        <p><input type="checkbox"/>MyThread</p>
-                    </div>
-                    <p class="empty" style="display: none">no threads matching</p>
-                </div>
                 <div class="flameRoot">
                     <div style="display: flex; flex-direction: column">
                     <div style="align-self: center; font-size: 2em; padding-left: 1.5em;">Flame chart is loading ...</div>
@@ -41,7 +50,9 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>        
         <script id="importflame_fg1">/* template placeholder*/</script>
+        <div id="debug_console">            
+        </div>
     </body>
 </html>
