[Flame] Zoom support added

--- a/sjk-hflame/src/main/resources/flame_template.html
+++ b/sjk-hflame/src/main/resources/flame_template.html
@@ -33,21 +33,22 @@
             <div style="display: flex; flex-direction: row; justify-content: space-between">
                 <div></div>
                 <div class="flameStateFilter" style="position: relative">
-                    <a class="btn">states</a>
+                    <a class="btn" style="display: none">states</a>
                     <div class="panel" style="display: none">---</div>
                 </div>
                 <div class="flameThreadFilter" style="position: relative">
-                    <a class="btn">thread</a>
+                    <a class="btn" style="display: none">thread</a>
                     <div class="panel" style="display: none">---</div>
                 </div>
             </div>
-            <div style="position: relative">
+            <div class="flameArea">
                 <div class="flameRoot">
                     <div style="display: flex; flex-direction: column">
                     <div style="align-self: center; font-size: 2em; padding-left: 1.5em;">Flame chart is loading ...</div>
                     <div style="align-self: center">You need JavaScript enbaled for flame chart to function</div>
                     <div style="align-self: center">It may take couple of minutes</div>
                     </div>
+                    <div style="min-height: 15em"></div>
                 </div>
             </div>
         </div>        
