[Flame] Added link to SJK's page from flame graph

--- a/sjk-hflame/src/main/resources/flame_template.html
+++ b/sjk-hflame/src/main/resources/flame_template.html
@@ -29,9 +29,9 @@
     </head>
     <body>
         <div id="fg1" class="flameFrame">
-            <div class="flameHover" style="display: none">This is flame hover</div>
+            <div class="flameHover" style="display: none">This is flame hover</div>            
             <div style="display: flex; flex-direction: row; justify-content: space-between">
-                <div></div>
+                <div class='credit'>Created with <a href="https://github.com/aragozin/jvm-tools">SJK</a></div>
                 <div class="flameStateFilter" style="position: relative">
                     <a class="btn" style="display: none">states</a>
                     <div class="panel" style="display: none">---</div>
