--- a/sjk-hflame/src/main/resources/flame_template.html
+++ b/sjk-hflame/src/main/resources/flame_template.html
@@ -10,7 +10,7 @@
         </script>
         <link rel="stylesheet" type="text/css" href="css/flame.css"/>
         <script src="js/jquery-3.1.1.min.js"></script>
-        <script>
+        <script id="debug_out">
             function debug(text) {
                 $("<p></p>").text(text).prependTo("#debug_console");
             }
@@ -22,7 +22,7 @@
         <script src="js/flamer-graph.js"></script>
         <script src="js/flamer-controller.js"></script>
 
-        <script src="../../test/resources/js/dummy_data_stub.js"></script>
+        <script src="../../test/resources/js/dummy_data_tiny.js"></script>
         <script>
             $(document).ready(function() {createFlameChart("fg1", data).initFlameChart()});
         </script>        
